CMake: add TCP client and server executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,9 @@ target_link_libraries (sockpuppet_udp_client sockpuppet)
 
 add_executable (sockpuppet_udp_server sockpuppet_udp_server.cpp)
 target_link_libraries (sockpuppet_udp_server sockpuppet)
+
+add_executable (sockpuppet_tcp_client sockpuppet_tcp_client.cpp)
+target_link_libraries (sockpuppet_tcp_client sockpuppet)
+
+add_executable (sockpuppet_tcp_server sockpuppet_tcp_server.cpp)
+target_link_libraries (sockpuppet_tcp_server sockpuppet)
