Socket: add SocketPriv as further abstraction this allows us to move some types out of the library interface as well as to work around the windows compiler warning for SOCKET != int

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_library(sockpuppet
   src/socket_address_priv.h
   src/socket_guard.cpp
   include/socket_guard.h
+  src/socket_priv.cpp
+  src/socket_priv.h
 )
 
 include_directories(include)
