move windows link command to CMake, cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,10 @@ add_library(sockpuppet
 
 include_directories(include)
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+  target_link_libraries(sockpuppet WS2_32.Lib)
+endif()
+
 if(${BUILD_TESTS})
   add_subdirectory(test)
 endif()
