--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,14 @@ else()
   target_link_libraries(sockpuppet_tcp_test sockpuppet)
 endif()
 
+add_executable(sockpuppet_udp_buffered_test sockpuppet_udp_buffered_test.cpp)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  target_link_libraries(sockpuppet_udp_buffered_test sockpuppet pthread)
+else()
+  target_link_libraries(sockpuppet_udp_buffered_test sockpuppet)
+endif()
+
 install(TARGETS sockpuppet_address_test DESTINATION bin)
 install(TARGETS sockpuppet_udp_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_test DESTINATION bin)
+install(TARGETS sockpuppet_udp_buffered_test DESTINATION bin)
