CMake: add run_tests target

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,6 +36,21 @@ else()
   target_link_libraries(sockpuppet_tcp_buffered_test sockpuppet)
 endif()
 
+enable_testing()
+add_test(NAME sockpuppet_address_test COMMAND sockpuppet_address_test)
+add_test(NAME sockpuppet_udp_test COMMAND sockpuppet_udp_test)
+add_test(NAME sockpuppet_tcp_test COMMAND sockpuppet_tcp_test)
+add_test(NAME sockpuppet_udp_buffered_test COMMAND sockpuppet_udp_buffered_test)
+add_test(NAME sockpuppet_tcp_buffered_test COMMAND sockpuppet_tcp_buffered_test)
+add_custom_target(run_tests
+  COMMAND ${CMAKE_CTEST_COMMAND}
+  DEPENDS sockpuppet_address_test
+          sockpuppet_udp_test
+          sockpuppet_tcp_test
+          sockpuppet_udp_buffered_test
+          sockpuppet_tcp_buffered_test
+)
+
 install(TARGETS sockpuppet_address_test DESTINATION bin)
 install(TARGETS sockpuppet_udp_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_test DESTINATION bin)
