CMake: add SocketAsync tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,12 +36,28 @@ else()
   target_link_libraries(sockpuppet_tcp_buffered_test sockpuppet)
 endif()
 
+add_executable(sockpuppet_udp_async_test sockpuppet_udp_async_test.cpp)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  target_link_libraries(sockpuppet_udp_async_test sockpuppet pthread)
+else()
+  target_link_libraries(sockpuppet_udp_async_test sockpuppet)
+endif()
+
+add_executable(sockpuppet_tcp_async_test sockpuppet_tcp_async_test.cpp)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  target_link_libraries(sockpuppet_tcp_async_test sockpuppet pthread)
+else()
+  target_link_libraries(sockpuppet_tcp_async_test sockpuppet)
+endif()
+
 enable_testing()
 add_test(NAME sockpuppet_address_test COMMAND sockpuppet_address_test)
 add_test(NAME sockpuppet_udp_test COMMAND sockpuppet_udp_test)
 add_test(NAME sockpuppet_tcp_test COMMAND sockpuppet_tcp_test)
 add_test(NAME sockpuppet_udp_buffered_test COMMAND sockpuppet_udp_buffered_test)
 add_test(NAME sockpuppet_tcp_buffered_test COMMAND sockpuppet_tcp_buffered_test)
+add_test(NAME sockpuppet_udp_async_test COMMAND sockpuppet_udp_async_test)
+add_test(NAME sockpuppet_tcp_async_test COMMAND sockpuppet_tcp_async_test)
 add_custom_target(run_tests
   COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> --verbose
   DEPENDS sockpuppet_address_test
@@ -49,6 +65,8 @@ add_custom_target(run_tests
           sockpuppet_tcp_test
           sockpuppet_udp_buffered_test
           sockpuppet_tcp_buffered_test
+          sockpuppet_udp_async_test
+          sockpuppet_tcp_async_test
 )
 
 install(TARGETS sockpuppet_address_test DESTINATION bin)
@@ -56,3 +74,5 @@ install(TARGETS sockpuppet_udp_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_test DESTINATION bin)
 install(TARGETS sockpuppet_udp_buffered_test DESTINATION bin)
 install(TARGETS sockpuppet_tcp_buffered_test DESTINATION bin)
+install(TARGETS sockpuppet_udp_async_test DESTINATION bin)
+install(TARGETS sockpuppet_tcp_async_test DESTINATION bin)
