CMake: add test helper to test executables

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,14 +22,14 @@ else()
   target_link_libraries(sockpuppet_tcp_test sockpuppet)
 endif()
 
-add_executable(sockpuppet_udp_buffered_test sockpuppet_udp_buffered_test.cpp)
+add_executable(sockpuppet_udp_buffered_test sockpuppet_udp_buffered_test.cpp sockpuppet_test_common.h)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   target_link_libraries(sockpuppet_udp_buffered_test sockpuppet pthread)
 else()
   target_link_libraries(sockpuppet_udp_buffered_test sockpuppet)
 endif()
 
-add_executable(sockpuppet_tcp_buffered_test sockpuppet_tcp_buffered_test.cpp)
+add_executable(sockpuppet_tcp_buffered_test sockpuppet_tcp_buffered_test.cpp sockpuppet_test_common.h)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   target_link_libraries(sockpuppet_tcp_buffered_test sockpuppet pthread)
 else()
