CMake: add utility file with helper for last socket error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,9 @@ add_library(sockpuppet
   src/socket_guard.h
   src/socket_priv.cpp
   src/socket_priv.h
+  src/util_unix.cpp
+  src/util_win.cpp
+  src/util.h
   ${SOCKPUPPET_PUBLIC_HEADERS}
 )
 set_target_properties(sockpuppet PROPERTIES PUBLIC_HEADER "${SOCKPUPPET_PUBLIC_HEADERS}")
