--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,10 +46,10 @@ add_library(sockpuppet
   src/socket_buffered.cpp
   src/socket_buffered_priv.cpp
   src/socket_buffered_priv.h
-  src/socket_guard.cpp
-  src/socket_guard.h
   src/socket_priv.cpp
   src/socket_priv.h
+  src/winsock_guard.cpp
+  src/winsock_guard.h
   ${SOCKPUPPET_PUBLIC_HEADERS}
 )
 set_target_properties(sockpuppet PROPERTIES PUBLIC_HEADER "${SOCKPUPPET_PUBLIC_HEADERS}")
