travis: enable verbose test output on shared lib as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
       env:
         - GENERATOR="Unix Makefiles"
         - SHARED=-DBUILD_SHARED_LIBS:BOOL=ON
+        - CTEST_OUTPUT_ON_FAILURE=1
 
 before_script:
   - mkdir build
